// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Components render correctly in theme: dark 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: light 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: dark-daltonized 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: light-daltonized 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ ⚠Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Components render correctly in theme: dark-ansi 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ !Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Components render correctly in theme: light-ansi 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│  System Stats                                                                                    │
│                                                                                                  │
│ ⠋Scanning files...                                                                               │
│ ─────────────────────────────────────────── Details  ─────────────────────────────────────────── │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │                                                                                              │ │
│ │ All subsystems operational                                                                   │ │
│ │  OK                                                                                          │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  STORAGE LIMIT                                                                               │ │
│ │                                                                                              │ │
│ │ !Disk utilization exceeds 85%.                                                               │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│ █████████░░░░░░░░░░░45%                                                                          │
│  [Auto]  Gemini 3.5 Flash        In: 1240 · Out: 382  $0.0024       Rate: █░░░░  'exit' to quit  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Full REPL screen renders correctly in theme: dark 1`] = `
"

                                 ____   ____      _      ___ _   _
                                | __ ) |  _ \\    / \\    |_ _| \\ | |
                                |  _ \\ | |_) |  / _ \\    | ||  \\| |
                                | |_) | |  _ < / ___ \\   | || |\\  |
                                |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|
                                   Memory Companion CLI · v0.1.0

 ────────────────────────────────── Relational Memory Dashboard  ──────────────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Memory Stream Terminal is ready. Send commands format: "query <text>" or "ingest <text>"       │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ System Monitor                                                                               │
 │                                                                                                │
 │                                                                                                │
 │  Error: Daemon stats server unreachable.                                                       │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

    File Browser  |    Config Wizard

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ File Browser (.brain/)                                                                       │
 │                                                                                                │
 │                                                                                                │
 │  Empty directory.                                                                              │
 │                                                                                                │
 │                                                                                                │
 │ +--------------------------------------------------------------------------------------------+ │
 │ |                                                                                            | │
 │ |↑/↓: Navigate entriesEnter: Enter directory / read fileEsc/←: Go up directory   Dir: .brain/| │
 │ +--------------------------------------------------------------------------------------------+ │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

  Daemon Status:✗ UnreachablePress [Tab] to cycle focus | Press [Ctrl+P] to toggle Command
                             Launcher

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

  [Auto]  Gemini 3.5 Flash         In: 1420 · Out: 495  $0.0031        Rate: ░░░░░  'exit' to quit
"
`;

exports[`Full REPL screen renders correctly in theme: light 1`] = `
"

                                 ____   ____      _      ___ _   _
                                | __ ) |  _ \\    / \\    |_ _| \\ | |
                                |  _ \\ | |_) |  / _ \\    | ||  \\| |
                                | |_) | |  _ < / ___ \\   | || |\\  |
                                |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|
                                   Memory Companion CLI · v0.1.0

 ────────────────────────────────── Relational Memory Dashboard  ──────────────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Memory Stream Terminal is ready. Send commands format: "query <text>" or "ingest <text>"       │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ System Monitor                                                                               │
 │                                                                                                │
 │                                                                                                │
 │  Error: Daemon stats server unreachable.                                                       │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

    File Browser  |    Config Wizard

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ File Browser (.brain/)                                                                       │
 │                                                                                                │
 │                                                                                                │
 │  Empty directory.                                                                              │
 │                                                                                                │
 │                                                                                                │
 │ +--------------------------------------------------------------------------------------------+ │
 │ |                                                                                            | │
 │ |↑/↓: Navigate entriesEnter: Enter directory / read fileEsc/←: Go up directory   Dir: .brain/| │
 │ +--------------------------------------------------------------------------------------------+ │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

  Daemon Status:✗ UnreachablePress [Tab] to cycle focus | Press [Ctrl+P] to toggle Command
                             Launcher

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

  [Auto]  Gemini 3.5 Flash         In: 1420 · Out: 495  $0.0031        Rate: ░░░░░  'exit' to quit
"
`;

exports[`Full REPL screen renders correctly in theme: dark-daltonized 1`] = `
"

                                 ____   ____      _      ___ _   _
                                | __ ) |  _ \\    / \\    |_ _| \\ | |
                                |  _ \\ | |_) |  / _ \\    | ||  \\| |
                                | |_) | |  _ < / ___ \\   | || |\\  |
                                |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|
                                   Memory Companion CLI · v0.1.0

 ────────────────────────────────── Relational Memory Dashboard  ──────────────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Memory Stream Terminal is ready. Send commands format: "query <text>" or "ingest <text>"       │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ System Monitor                                                                               │
 │                                                                                                │
 │                                                                                                │
 │  Error: Daemon stats server unreachable.                                                       │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

    File Browser  |    Config Wizard

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ File Browser (.brain/)                                                                       │
 │                                                                                                │
 │                                                                                                │
 │  Empty directory.                                                                              │
 │                                                                                                │
 │                                                                                                │
 │ +--------------------------------------------------------------------------------------------+ │
 │ |                                                                                            | │
 │ |↑/↓: Navigate entriesEnter: Enter directory / read fileEsc/←: Go up directory   Dir: .brain/| │
 │ +--------------------------------------------------------------------------------------------+ │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

  Daemon Status:✗ UnreachablePress [Tab] to cycle focus | Press [Ctrl+P] to toggle Command
                             Launcher

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

  [Auto]  Gemini 3.5 Flash         In: 1420 · Out: 495  $0.0031        Rate: ░░░░░  'exit' to quit
"
`;

exports[`Full REPL screen renders correctly in theme: light-daltonized 1`] = `
"

                                 ____   ____      _      ___ _   _
                                | __ ) |  _ \\    / \\    |_ _| \\ | |
                                |  _ \\ | |_) |  / _ \\    | ||  \\| |
                                | |_) | |  _ < / ___ \\   | || |\\  |
                                |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|
                                   Memory Companion CLI · v0.1.0

 ────────────────────────────────── Relational Memory Dashboard  ──────────────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Memory Stream Terminal is ready. Send commands format: "query <text>" or "ingest <text>"       │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ System Monitor                                                                               │
 │                                                                                                │
 │                                                                                                │
 │  Error: Daemon stats server unreachable.                                                       │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

    File Browser  |    Config Wizard

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ File Browser (.brain/)                                                                       │
 │                                                                                                │
 │                                                                                                │
 │  Empty directory.                                                                              │
 │                                                                                                │
 │                                                                                                │
 │ +--------------------------------------------------------------------------------------------+ │
 │ |                                                                                            | │
 │ |↑/↓: Navigate entriesEnter: Enter directory / read fileEsc/←: Go up directory   Dir: .brain/| │
 │ +--------------------------------------------------------------------------------------------+ │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

  Daemon Status:✗ UnreachablePress [Tab] to cycle focus | Press [Ctrl+P] to toggle Command
                             Launcher

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

  [Auto]  Gemini 3.5 Flash         In: 1420 · Out: 495  $0.0031        Rate: ░░░░░  'exit' to quit
"
`;

exports[`Full REPL screen renders correctly in theme: dark-ansi 1`] = `
"

                                 ____   ____      _      ___ _   _
                                | __ ) |  _ \\    / \\    |_ _| \\ | |
                                |  _ \\ | |_) |  / _ \\    | ||  \\| |
                                | |_) | |  _ < / ___ \\   | || |\\  |
                                |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|
                                   Memory Companion CLI · v0.1.0

 ────────────────────────────────── Relational Memory Dashboard  ──────────────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Memory Stream Terminal is ready. Send commands format: "query <text>" or "ingest <text>"       │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ System Monitor                                                                               │
 │                                                                                                │
 │                                                                                                │
 │  Error: Daemon stats server unreachable.                                                       │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

    File Browser  |    Config Wizard

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ File Browser (.brain/)                                                                       │
 │                                                                                                │
 │                                                                                                │
 │  Empty directory.                                                                              │
 │                                                                                                │
 │                                                                                                │
 │ +--------------------------------------------------------------------------------------------+ │
 │ |                                                                                            | │
 │ |↑/↓: Navigate entriesEnter: Enter directory / read fileEsc/←: Go up directory   Dir: .brain/| │
 │ +--------------------------------------------------------------------------------------------+ │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

  Daemon Status:✗ UnreachablePress [Tab] to cycle focus | Press [Ctrl+P] to toggle Command
                             Launcher

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

  [Auto]  Gemini 3.5 Flash         In: 1420 · Out: 495  $0.0031        Rate: ░░░░░  'exit' to quit
"
`;

exports[`Full REPL screen renders correctly in theme: light-ansi 1`] = `
"

                                 ____   ____      _      ___ _   _
                                | __ ) |  _ \\    / \\    |_ _| \\ | |
                                |  _ \\ | |_) |  / _ \\    | ||  \\| |
                                | |_) | |  _ < / ___ \\   | || |\\  |
                                |____/  |_| \\_\\_/   \\_\\ |___|_| \\_|
                                   Memory Companion CLI · v0.1.0

 ────────────────────────────────── Relational Memory Dashboard  ──────────────────────────────────

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Memory Stream Terminal is ready. Send commands format: "query <text>" or "ingest <text>"       │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ System Monitor                                                                               │
 │                                                                                                │
 │                                                                                                │
 │  Error: Daemon stats server unreachable.                                                       │
 │                                                                                                │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

    File Browser  |    Config Wizard

 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │                                                                                                │
 │ ○ File Browser (.brain/)                                                                       │
 │                                                                                                │
 │                                                                                                │
 │  Empty directory.                                                                              │
 │                                                                                                │
 │                                                                                                │
 │ +--------------------------------------------------------------------------------------------+ │
 │ |                                                                                            | │
 │ |↑/↓: Navigate entriesEnter: Enter directory / read fileEsc/←: Go up directory   Dir: .brain/| │
 │ +--------------------------------------------------------------------------------------------+ │
 │                                                                                                │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯

  Daemon Status:✗ UnreachablePress [Tab] to cycle focus | Press [Ctrl+P] to toggle Command
                             Launcher

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │ Memory Engine> Type a memory command (e.g. query, ingest) or exit...█                          │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

  [Auto]  Gemini 3.5 Flash         In: 1420 · Out: 495  $0.0031        Rate: ░░░░░  'exit' to quit
"
`;
